--- a/templates/settings.html
+++ b/templates/settings.html
@@ -16,127 +16,64 @@
 
 </head>
 
-<body>
-
-
-       
-
-          
-
-            <div class="container m-auto"> 
-
-                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> Account Settings for <b>{{user.username}}</b></h1>
-                <a href="/">Go back to home</a>
-                <!-- <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
-                    <li class="uk-active"><a href="#">General</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Notification</a></li>
-                    <li><a href="#">Social links</a></li>
-                    <li><a href="#">Billing</a></li>
-                    <li><a href="#">Security</a></li>
-                </ul> -->
-                <br>
-                <hr>
-
-                <div class="grid lg:grid-cols-3 mt-12 gap-8">
-                    <div>
-                        <h3 class="text-xl mb-2"> General </h3>
-                        <p></p>
-                    </div>
-                    <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-                        
-                    <form action="" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %}
-                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-        
-                            <div class="col-span-2">
-                                <label for="about">Bio</label>  
-                                <textarea id="about" name="bio" rows="3" class="shadow-none bg-gray-100">{{ user_profile.bio }}</textarea>
-                            </div> 
-                            <div class="col-span-2">
-                                <label for=""> Profile image </label>
-                                <img width="100" height="100" src="{{user_profile.profileimg.url}}" />
-                                <input type="file" name="image" value="" class="shadow-none bg-gray-100">
-                            </div>
+<body class="bg-white">
     
-                       <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
-                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"> <a href="/">Cancel</a> </button>
-                           <button type="submit" class="button bg-blue-700"> Save </button>
-                       </div>
-                    </form>
-    
-                    </div>
+    <div id="wrapper" class="bg-white flex flex-col justify-between h-screen">
 
-                    <!-- <div>
-                        <h3 class="text-xl mb-2"> Privacy</h3>
-                        <p> </p>
-                    </div>
-                    <div class="bg-white rounded-md lg:shadow-lg shadow lg:p-6 p-4 col-span-2">
+        <!--header -->
+        <div class="bg-white py-4 shadow dark:bg-gray-800">
+            <div class="max-w-6xl mx-auto">
 
-                    <div class="space-y-3">
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> Who can follow me ?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox"><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> Show my activities ?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox" checked><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> Search engines?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox"><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> Allow Commenting?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox"><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-    
+
+                <div class="flex items-center lg:justify-between justify-around">
+
+                    <img src="{% static 'images/moments-logo.svg' %}" alt="logo" />
+
+                    <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm"> 
+                        <a href="/" class="bg-black px-6 py-3 rounded-md shadow text-white">Home</a>
                     </div>
-                    <br>
 
                 </div>
-
             </div>
-            
         </div>
 
+        <!-- Content-->
+        <div>
+            <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto space-y-"> 
+                <div class="container m-auto">
+                    <div class="bg-gray-100 rounded-md lg:shadow-lg shadow col-span-2 lg:p-6 p-4">
+                        <div class="lg:p-6 p-4">
+                            <h2 class="lg:text-3xl text-xl text-black font-semibold">Profile settings</h2> 
+                            <p>People visiting your profile will see the following info</p>
+                        </div>
+                        <form action="" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
+                                <div class="col-span-2 mb-4">
+                                    <label for="about" class="text-black font-semibold">About</label>  
+                                    <textarea id="about" name="bio" rows="3" class="shadow-none bg-white p-2">{{ user_profile.bio }}</textarea>
+                                </div> 
+                                <div class="col-span-2">
+                                    <label for="" class="text-black font-semibold"> Profile image </label>
+                                    <img width="100" height="100" src="{{user_profile.profileimg.url}}" class="mb-2" />
+                                    <input type="file" name="image" value="" class="shadow-none bg-white p-2">
+                                </div>
+                            </div>
+                            
+                            <div class="bg-gray-10 p-6 pt-2 flex justify-end space-x-3">
+                                <button class="p-2 px-4 rounded bg-white text-black"> <a href="/">Cancel</a> </button>
+                                <button type="submit" class="bg-black text-white p-2 px-4 rounded-md shadow"> Save </button>
+                            </div>
+                        </form>
+                    </div>
+                </div> 
+                <br> 
+            </div>
+        </div>
     </div>
 
 
-    
+
 
  <!-- Scripts
     ================================================== -->
