--- a/static/assets/css/tailwind.css
+++ b/static/assets/css/tailwind.css
@@ -668,7 +668,7 @@ video {
 
 .bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  background-color: #ffffff
 }
 
 .bg-gray-50{
@@ -2208,7 +2208,7 @@ body{  font-family: inter, sans-serif !important
 
   .lg\:bg-white{
     --tw-bg-opacity: 1;
-    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+    background-color: #EFEEE4
   }
 
   .lg\:block{
