--- a/templates/signin.html
+++ b/templates/signin.html
@@ -19,25 +19,25 @@
 
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-white">
 
 
-    <div id="wrapper" class="flex flex-col justify-between h-screen">
+    <div id="wrapper" class="bg-white flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="bg-white py-4 shadow dark:bg-gray-800">
+        <div class="bg-white py-4 shadow">
             <div class="max-w-6xl mx-auto">
 
 
                 <div class="flex items-center lg:justify-between justify-around">
 
-                    <a href="trending.html">
-                       <b><img src="{% static 'assets/images/moments-logo.svg' %}" /></b>
-                    </a>
+                    
+                    <img src="{% static 'images/moments-logo.svg' %}" />
+          
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
                         
-                        <a href="/signup" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Register</a>
+                        <a href="/signup" class="bg-black px-6 py-3 rounded-md shadow text-white">Create account</a>
                     </div>
 
                 </div>
@@ -47,7 +47,7 @@
         <!-- Content-->
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
-                <h1 class="lg:text-3xl text-xl font-semibold  mb-6"> Log in</h1>
+                <h1 class="lg:text-3xl text-l font-semibold  mb-6"> Log in</h1>
                 <div>
                     <style>
                         h5{
@@ -61,18 +61,18 @@
                 </div>
                 <form action="" method="POST">
                     {% csrf_token %}
-                    <input type="text" name="username" placeholder="Username" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <input type="password" name="password" placeholder="Password" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <div class="flex justify-between my-4">
+                    <input type="text" name="username" placeholder="Username" class="bg-white mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <input type="password" name="password" placeholder="Password" class="bg-white mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <!-- <div class="flex justify-between my-4">
                         <div class="checkbox">
                             <input type="checkbox" id="chekcbox1" checked>
                             <label for="chekcbox1"><span class="checkbox-icon"></span>Remember Me</label>
                         </div>
                         <a href="#"> Forgot Your Password? </a>
-                    </div>
-                    <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Login</button>
+                    </div> -->
+                    <button type="submit" class="bg-black py-3 rounded-md text-white text-xl w-full">Login</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Not registered? <a href="/signup" class=""> Create an account </a></p>
+                        <p class="text-base"> Not registered? <a href="/signup"><b>Create an account</b></a></p>
                     </div>
                 </form>
             </div>
@@ -82,55 +82,16 @@
 
         <div class="lg:mb-5 py-3 uk-link-reset">
             <div class="flex flex-col items-center justify-between lg:flex-row max-w-6xl mx-auto lg:space-y-0 space-y-3">
-                <div class="flex space-x-2 text-gray-700 uppercase">
-                    <a href="#"> About</a>
-                    <a href="#"> Help</a>
-                    <a href="#"> Terms</a>
-                    <a href="#"> Privacy</a>
+                <div class="flex space-x-2 text-gray-700">
+                    <p>Project by Anna Clausen</p>
+                    
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p> Thank you for your support!</p>
             </div>
         </div>
 
     </div>
 
-
-    <!--<script>
-        
-        (function (window, document, undefined) {
-            'use strict';
-            if (!('localStorage' in window)) return;
-            var nightMode = localStorage.getItem('gmtNightMode');
-            if (nightMode) {
-                document.documentElement.className += ' dark';
-            }
-        })(window, document);
-    
-    
-        (function (window, document, undefined) {
-    
-            'use strict';
-    
-            // Feature test
-            if (!('localStorage' in window)) return;
-    
-            // Get our newly insert toggle
-            var nightMode = document.querySelector('#night-mode');
-            if (!nightMode) return;
-    
-            // When clicked, toggle night mode on or off
-            nightMode.addEventListener('click', function (event) {
-                event.preventDefault();
-                document.documentElement.classList.toggle('dark');
-                if (document.documentElement.classList.contains('dark')) {
-                    localStorage.setItem('gmtNightMode', true);
-                    return;
-                }
-                localStorage.removeItem('gmtNightMode');
-            }, false);
-    
-        })(window, document);
-    </script>-->
 
     <!-- Scripts
     ================================================== -->
