--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,10 +19,10 @@
 
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-white">
 
 
-    <div id="wrapper" class="flex flex-col justify-between h-screen">
+    <div id="wrapper" class="bg-white flex flex-col justify-between h-screen">
 
         <!-- header-->
         <div class="bg-white py-4 shadow dark:bg-gray-800">
@@ -31,13 +31,11 @@
 
                 <div class="flex items-center lg:justify-between justify-around">
 
-                    <a href="trending.html">
-                        <b><h1 style="font-size: 1.5rem;">Social Book</h1></b>
-                    </a>
+                    <img src="{% static 'images/moments-logo.svg' %}" />
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
                         
-                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Log in</a>
+                        <a href="/signin" class="bg-black px-6 py-3 rounded-md shadow text-white">Log in</a>
                     </div>
 
                 </div>
@@ -48,7 +46,7 @@
 
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
-                <h1 class="lg:text-3xl text-xl font-semibold mb-6"> Sign up</h1>
+                <h1 class="lg:text-3xl text-xl font-semibold mb-6 text-black"> Sign up</h1>
                 <!--<p class="mb-2 text-black text-lg"> Register to manage your account </p>-->
                 <div>
                     <style>
@@ -59,19 +57,14 @@
                     {% for message in messages %}
                     <h5>{{message}}</h5>
                     {% endfor %}
-
                 </div>
                 <form action="" method="POST" >
                     {% csrf_token %}
-                    <!--<div class="flex lg:flex-row flex-col lg:space-x-2">
-                        <input type="text" placeholder="First Name"  class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                        <input type="text" placeholder="Last Name" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    </div>-->
-                    <input type="text" name="username" placeholder="Username" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <input type="email" name="email" placeholder="Email" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <input type="password" name="password" placeholder="Password" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <input type="password" name="password2" placeholder="Confirm Password" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Sign up</button>
+                    <input type="text" name="username" placeholder="Username" class="bg-white mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <input type="email" name="email" placeholder="Email" class="bg-white mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <input type="password" name="password" placeholder="Password" class="bg-white mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <input type="password" name="password2" placeholder="Confirm Password" class="bg-white mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <button type="submit" class="bg-black py-3 rounded-md text-white text-lg w-full">Sign up</button>
                     <div class="text-center mt-5 space-x-2">
                         <p class="text-base"> Do you have an account? <a href="/signin"> Log in </a></p>
                     </div>
@@ -83,13 +76,11 @@
 
         <div class="lg:mb-5 py-3 uk-link-reset">
             <div class="flex flex-col items-center justify-between lg:flex-row max-w-6xl mx-auto lg:space-y-0 space-y-3">
-                <div class="flex space-x-2 text-gray-700 uppercase">
-                    <a href="#"> About</a>
-                    <a href="#"> Help</a>
-                    <a href="#"> Terms</a>
-                    <a href="#"> Privacy</a>
+                <div class="flex space-x-2 text-gray-700">
+                    <p>Project by Anna Clausen</p>
+                    
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p> Thank you for your support!</p>
             </div>
         </div>
 
